# Doppel

./: .env.example  .gitignore  CONTRIBUTING.md  Doppel_Architecture_CN.md  Doppel_PRD_CN.md  LICENSE  README.md  index.html  pyproject.toml  runtime.local.example.yaml
docs/: current-project-status-2026-05-07.md  portfolio-snippet.md  project-progress.md  roadmap-issues.md  v0.1.0-retrospective.md
doppel/browser/: __init__.py  adapter.py  browser_use_client.py  playwright_adapter.py
doppel/cli/: __init__.py  main.py
doppel/config/: loader.py  models.py
doppel/judge/: __init__.py  criteria_evaluator.py  fact_extractor.py  schema.py
doppel/reporting/: __init__.py  builder.py
doppel/runtime/: __init__.py  agent_runtime.py  batch.py  models.py  orchestrator.py  stop_conditions.py
doppel/sandbox/: __init__.py  base.py  preview.py  remote.py
doppel/session/: __init__.py  recorder.py
doppel/utils/: __init__.py  paths.py
examples/ai-bot-cn/: README.md  personas.yaml  product.yaml  skill-designer.yaml  skill-newcomer.yaml  skill-privacy.yaml  skill-product-manager.yaml  skill.yaml
examples/basic/: personas.yaml  product.yaml  runtime.nvidia.example.yaml  skill.yaml
examples/example-domain/: personas.yaml  product.yaml  skill.yaml
examples/zao-live/: personas.yaml  product.yaml  skill-designer.yaml  skill-newcomer.yaml  skill-privacy.yaml  skill-product-manager.yaml  skill.yaml
tests/_python-org/: personas.yaml  product.yaml  skill.yaml
tests/_youtube/: personas.yaml  product.yaml  skill.yaml
tests/e2e/: test_cli_run_smoke.py
(+48 files in other folders)
